--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -904,40 +904,41 @@ In addition to the match between the qualitative predictions of our model and th
 \section{General discussion}
 
 We began with an old observation about collective interpretations for gradable predicates with plural subjects: some predicates admit collective interpretations, while others strongly (or totally) resist them. This phenomenon, dubbed ``stubborn distributivity'' after those predicates that ostensibly refuse collective interpretations, has been documented and described, even characterized in terms of semantic constraints. But an explanation of the phenomenon has proven elusive. Here, we offer an explanation: stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in most contexts; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
-On this pragmatic account stubborn distributivity does not form a distinct category, rather there is a gradient of stubbornness. What's more, the extent that collective interpretations are drawn should be sensitive to contextual factors.
-%While this reasoning is enough to motivate our experiments, some confusion could remain about the exact nature and role of factors such as predictability. 
-In section \ref{model} we formalized our hypothesis with a computational model of pragmatic dissambiguation that gives a precise role for contextual noise and speaker knowledge. This pragmatic model indeed predicts that the acceptability of collective readings should depend on predictability. 
+On this pragmatic account, stubborn distributivity does not form a distinct category; rather, there is a gradient of stubbornness. Moreover, the extent that collective interpretations are drawn should be sensitive to contextual factors.
 
 %Having both demonstrated and quantified the role of contextual predictability and speaker knowledge in plural predication, we then formalized the role of each factor in a computational model of communication. Our model, conceived within the Rational Speech-Act framework, employed a standard semantics to achieve not only accurate qualitative, but accurate quantitative predictions of our human data. Speaker knowledge affected collective interpretations by removing epistemic support and thereby decreasing a speaker's utility for distributive interpretations. Contextual predictability had a similar effect: noisier collective interpretations are less effective at correctly communicating about the world; being less useful, they are less likely.
 
+%\ndg{i'd prefer to have the info in the net three paragraphs organized by effect, rather than expt: status of classes according to stubbornness, effect of predictability, effect of speaker knowledge.}
 
-\ndg{i'd prefer to have the info in the net three paragraphs organized by effect, rather than expt: status of classes according to stubbornness, effect of predictability, effect of speaker knowledge.}
+We found evidence for this pragmatic explanation over the course of three experiments. Perhaps most problematic for a categorial account of stubborn distributivity were the results of Expt.~2, where we showed that predicates do not form neat groupings according to whether they are stubbornly distributive; stubbornness indeed is gradient, and depends on many aspects of the context of predication. Here we focused on two such aspects: the contextual predictability of collective properties and speakers' access to knowledge.
 
-We found evidence for this pragmatic explanation over the course of three experiments. First, in Expt.~1, we verified the phenomenon of stubborn distributivity, demonstrating that \emph{big} resists collective interpretations while \emph{heavy} admits them. The results of Expt.~1 also begin to demonstrate the role of speaker access to knowledge, something both speakers and listeners track as they communicate with each other. In a scenario where speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely.
+After manipulating the regularity of the predication context directly in Expt.~3, we found that more regular contexts yielded greater rates of collective paraphrase endorsement. We thus confirmed our hypothesis: increasing contextual predictability of collective properties---by increasing the regularity of the contexts themselves---increases rates of collective interpretations. In other words, rates of collective interpretation were shown to be influenced by an interaction between the predictability of the property named and the amount of noise in the context of predication. 
+%First, in Expt.~1, we verified the phenomenon of stubborn distributivity, demonstrating that \emph{big} resists collective interpretations while \emph{heavy} admits them. The results of Expt.~1 also begin to demonstrate the role of 
 
-In Expt.~2, we applied our paraphrase endorsement method to naturally-occurring examples in the absence of specific referents. Once again, we saw that interpretations are likely to the extent that a speaker plausibly holds the knowledge to verify them. We also began to find evidence of the role of contextual predictability in collective interpretations: for stubbornly distributive \emph{big} and \emph{small}, collective endorsement ratings increased for nominal subjects with a relatively predictable arrangement or evaluation strategy for collective size.
+We similarly confirmed our hypothesis regarding speaker knowledge: in Expts.~1 and 3, we manipulated the discourse context by limiting speaker access to knowledge. We found that when speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely; speakers are less likely to intend an interpretation for which they lack epistemic support.
 
-In Expt.~3, we further pursued the speaker knowledge effect while testing more directly the role of contextual predictability in collective predication. After manipulating the regularity of the predication context, we found that more regular contexts yielded greater rates of collective paraphrase endorsement. We thus confirmed our hypothesis: increasing contextual predictability of collective properties---by increasing the regularity of the contexts themselves---increases rates of collective interpretations. In other words, rates of collective interpretation were shown to be influenced by an interaction between the predictability of the property named and the context of predication. Also in Expt.~3, we indirectly manipulated speaker access to knowledge, again finding that without the evidence to verify it, an interpretation becomes less likely.
-
+%While this reasoning is enough to motivate our experiments, some confusion could remain about the exact nature and role of factors such as predictability. 
+In section \ref{model} we formalized our hypotheses with a computational model of pragmatic dissambiguation that gives a precise role for contextual noise and speaker knowledge. This pragmatic model indeed predicts that the acceptability of collective readings should depend on predictability and speaker knowledge. 
 
 In what follows, we discuss in more detail the consequences of these findings for the theories they inform.
 
 \subsection{Implications for semantic theories of plural predication}
 
-\ndg{this subsection is fine, though maybe a bit wordy.}
+%\ndg{this subsection is fine, though maybe a bit wordy.}
 
-Plural predication is heavily dependent on the context in which that predication occurs. Taking as our starting point the null hypothesis that all such predications are potentially ambiguous between collective and distributive interpretations, we saw that speakers and listeners track properties of the context (and of each other) as they endeavor to resolve this ambiguity. By considering plural predication within an articulated formal theory of communication (i.e., the Rational Speech-Act framework), we have identified and isolated two elements of this calculus: a) the speaker's access to knowledge; and b) noise in the estimation of properties, or contextual predictability. For present purposes, it is this latter element, contextual predictability, that features most prominently in our explanation of stubborn distributivity.
+Plural predication is heavily dependent on the context in which that predication occurs. Taking as our starting point the null hypothesis that all such predications are potentially ambiguous between collective and distributive interpretations, we saw that speakers and listeners track properties of the context (and of each other) as they endeavor to resolve this ambiguity. By considering plural predication within an articulated formal theory of communication, we have isolated two elements of this calculus: a) the speaker's access to knowledge; and b) noise in the estimation of collective properties, or contextual predictability. It is this latter element, contextual predictability, that features most prominently in our explanation of stubborn distributivity.
 
-Recall that current theories of stubborn distributivity describe it as a constraint on the sort of subjects certain predicates may compose with. Specifically, stubbornly distributive predicates refuse pluralities from their basic denotations. 
+Recall that current theories of stubborn distributivity describe it as a constraint on the sort of subjects certain predicates may compose with. 
+%Specifically, stubbornly distributive predicates refuse pluralities from their basic denotations. 
 Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretations. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. Even unabashedly stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them. And it is the way that context supports collective interpretations that provides the key to understanding where stubborn distributivity comes from in the first place: contextual predictability.
 
-Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{round}, which name properties of size or shape. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates, but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties as we did in Expt.~3 decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
+Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{tall}, which name properties of physical extent. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates, but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
 
 Further evidence for the non-trivial role of contextual predictability in collective predication comes from data demonstrating that one and the same predicate receives varying rates of collective interpretations depending on the noun that serves as its subject. Looking at naturally-occurring examples of plural predication, we identified the most frequent subject nouns for the stubbornly distributive predicates \emph{big} and \emph{small} in a plural predication sentence frame. These predicates generally resisted collective interpretations, as we would expect if they were stubbornly distributive, but certain subject nouns yielded greater rates of collective interpretations. Crucially, these were the subject nouns that suggested relatively specific collective properties. 
-The same mechanism we saw at play in the context manipulation of Expt.~3 rears its head here: contextual predictability of the collective property determines availability of collective interpretations.
+Again, contextual predictability of the collective property determines availability of collective interpretations.
 
-Note that subject nouns already played a crucial role in the disambiguation of plural predications. \cite{schwarzschild2011} observed that physically aggregating a plurality using an atomizing noun like \emph{pile} or \emph{stack} greatly increases the availability of collective interpretations. He observed a similar, though opposite effect for mass nouns, which lack any information about physical arrangement. Again, semantics might attend to the atomic status of the resulting noun phrase in its evaluation of stubborn distributivity (e.g., \emph{the pile of boxes} names a single atom, while \emph{the boxes} most likely does not), but pragmatics provides us with an explanation for why these collectivizing nouns seem to unlock the collective interpretation. Just as our contextual manipulation in Expt.~3 increased contextual predictability of collective size or height by increasing the likelihood of encountering a plurality of boxes in a specific physical arrangement, so too do atomizing nouns. The arrangement of a \emph{stack} or \emph{pile} of boxes is much more regular across contexts than an abstract collection thereof. It is this regularity introduced by the atomizing noun that permits an otherwise elusive collective interpretation; the information-theoretic mechanism remains the same.
-\ndg{shouldn't pile have unpredictable arrangement??}
+Note that subject nouns already played a central role in the disambiguation of plural predications. \cite{schwarzschild2011} observed that physically aggregating a plurality using an atomizing noun like \emph{pile} or \emph{stack} greatly increases the availability of collective interpretations. He observed a similar, though opposite effect for mass nouns, which lack any information about physical arrangement. Again, semantics might attend to the atomic status of the resulting noun phrase in its evaluation of stubborn distributivity (e.g., \emph{the pile of boxes} names a single atom, while \emph{the boxes} most likely does not), but pragmatics provides us with an explanation for why these collectivizing nouns seem to unlock the collective interpretation. Just as our contextual manipulation increased contextual predictability of collective size or height by increasing the likelihood of encountering a plurality of boxes in a specific physical arrangement, so too do atomizing nouns. The arrangement of a \emph{stack} or \emph{pile} of boxes is much more regular across contexts than an abstract collection thereof. It is this regularity introduced by the atomizing noun that permits an otherwise elusive collective interpretation; the information-theoretic mechanism remains the same.
+\ndg{shouldn't pile have unpredictable arrangement??} \gcs{it's much more predictable than just \emph{the boxes}}
 
 \ndg{do we need to more directly address david beaver and chris kennedy's question about whether the action is in the predicate or the noun? my take is that it could be either -- our model and results are at the level of the whole phrase, leaving open where in the compositional / lexical semantics the ambiguity is actually located.}
 
@@ -945,21 +946,28 @@ To understand this mechanism, namely how contextual predictability affects the c
 
 \subsection{Implications for formal models of pragmatics}
 
-\ndg{this section is too long. discussion should be for discussing additional points and issues, not for recapitulating the earlier points (except in service of discussing). so.. cut a lot of the review and explanation of the model from this section, and focus on the actual implications for formal pragmatics: ambiguity resolution in terms of lifted-variable models; the role of noise that comes from uncertainty about context, especially when the noise differentially affects alternate meanings; epistemic manipulations as a test of whether a missing reading is grammatically prohibited or only pragmatically dispreferred; etc?}
+%\ndg{this section is too long. discussion should be for discussing additional points and issues, not for recapitulating the earlier points (except in service of discussing). so.. cut a lot of the review and explanation of the model from this section, and focus on the actual implications for formal pragmatics: ambiguity resolution in terms of lifted-variable models; the role of noise that comes from uncertainty about context, especially when the noise differentially affects alternate meanings; epistemic manipulations as a test of whether a missing reading is grammatically prohibited or only pragmatically dispreferred; etc?}
 
-Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. By considering utterance semantics within this articulated model of pragmatics, what began as a description of the phenomenon---certain predicates resist collective interpretations---now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (e.g.~collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
+Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. 
+%Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. 
+Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model to derive not just qualitative, but quantitative predictions. Our modeling approach has allowed for the specification and testing of hypotheses situated at the interface between semantics and pragmatics: how utterance semantics interacts with properties of context---both linguistic and more broadly construed---to resolve the intended interpretation of potentially ambiguous utterances. 
+By considering utterance semantics within an articulated model of pragmatics, what began as a description of the phenomenon---certain predicates resist collective interpretations---now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (e.g., collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
 
-Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model to derive not just qualitative, but quantitative predictions. Formulated within the Rational Speech-Act framework, our model leveraged Bayesian inference, together with minimal assumptions about utterance semantics and cost, to match near-perfectly participants' behavior in our experimental paradigm. The model's success and structure serve to support the intuitions that motivated it: increasing the contextual predictability of collective properties increases the probability of an ambiguous plural predication receiving a collective interpretation. Given its discrete, isolable components, we can identify the contribution of this effect at each level of inference. 
+Formulated within the Rational Speech-Act framework, our model leveraged Bayesian inference, together with minimal assumptions about utterance semantics, to match near-perfectly participants' behavior in our experimental paradigm. We showed how ambiguity resolution gets modeled as pragmatic inference about a lifted-variable that determines the literal semantics of an utterance. To capture stubborn distributivity, we made our literal semantics dependent on noise that comes from uncertainty about context, and saw that when contextual noise differentially affects alternate interpretations, the relative utility of an interpretation changes. Both the noise and the epistemic manipulations serve as a test of whether a missing reading is truly grammatically prohibited, or merely pragmatically dispreferred. In the case of pragmatically dispreferred readings, given the discrete, isolable components of the model, we can identify the contribution and effect of pragmatic factors at each level of inference.
 
-Recall the general structure of the plural predication model from Fig.~\ref{pluralRSA}: the pragmatic listener $L_{1}$ reasons about the speaker $S_{1}$ reasoning about a naive listener $L_{0}$. At the lowest level of inference, $L_{0}$ interprets an utterance $u$ according to some interpretation $V$ to determine the state of affairs $s$. We model contextual predictability as the inverse of noise in the collective interpretation, which manifests as a scalar multiplier of the estimated collective property. In other words, as collective noise increases, contextual predictability of the collective property decreases. At the level of $L_{0}$, noise serves to decrease the probability of correctly resolving the state. Descriptively, the distribution over states $L_{0}$ infers is flatter as a function of noise. Simply put, noisier interpretations are less informative.
+%The model's success and structure serve to support the intuitions that motivated it: increasing the contextual predictability of collective properties increases the probability of an ambiguous plural predication receiving a collective interpretation. 
 
-At the second level of inference, $S_{1}$ is aware of this effect of noise on $L_{0}$, and takes it into account as he estimates the utility of his utterance. Noisier, less informative interpretations are less useful for $S_{1}$ to achieve the goal of correctly resolving $s$, and as a result $S_{1}$ is less likely to use them. At the highest level of inference, $L_{1}$ is the aware of the effect of noise on the choice of $S_{1}$'s utterance interpretations. Given this effect, $L_{1}$ is less likely to resolve the interpretation as collective (and thus is more likely to resolve it as distributive) as noise increases. As a result, the probability of a collective interpretation for an ambiguous utterance (e.g., \emph{The boxes are big}) decreases as noise increases. To correctly predict the human data concerning collective interpretations from Expt.~3, all we needed was to assign different values for collective noise to the different predicates in our model. Again, the success of this manipulation confirms our original hypothesis: different predicates carry different amounts of noise with their collective properties, which determines their relative rates of collective interpretations.
+%Recall the general structure of the plural predication model from Fig.~\ref{pluralRSA}: the pragmatic listener $L_{1}$ reasons about the speaker $S_{1}$ reasoning about a naive listener $L_{0}$. At the lowest level of inference, $L_{0}$ interprets an utterance $u$ according to some interpretation $V$ to determine the state of affairs $s$. We model contextual predictability as the inverse of noise in the collective interpretation, which manifests as a scalar multiplier of the estimated collective property. In other words, as collective noise increases, contextual predictability of the collective property decreases. At the level of $L_{0}$, noise serves to decrease the probability of correctly resolving the state. Descriptively, the distribution over states $L_{0}$ infers is flatter as a function of noise. Simply put, noisier interpretations are less informative.
 
-Further supporting the general framework of rational inference in communication, our model also captured (both qualitatively and quantitatively) the affect of speaker knowledge on interpretation choice. We observed that in scenarios where speakers likely lacked information about individual properties, collective interpretations were more prevalent. We hypothesized a source for this effect: without epistemic support for distributive interpretations, collective interpretations are more useful to speakers, and thus more probable for listeners. The success of the speaker access to knowledge parameter, $a$, in our model lends credence to this hypothesis. As in the case of modeling contextual predictability, we may trace the source of this effect to its start.
+%At the second level of inference, $S_{1}$ is aware of this effect of noise on $L_{0}$, and takes it into account as he estimates the utility of his utterance. Noisier, less informative interpretations are less useful for $S_{1}$ to achieve the goal of correctly resolving $s$, and as a result $S_{1}$ is less likely to use them. At the highest level of inference, $L_{1}$ is the aware of the effect of noise on the choice of $S_{1}$'s utterance interpretations. Given this effect, $L_{1}$ is less likely to resolve the interpretation as collective (and thus is more likely to resolve it as distributive) as noise increases. As a result, the probability of a collective interpretation for an ambiguous utterance (e.g., \emph{The boxes are big}) decreases as noise increases. To correctly predict the human data concerning collective interpretations from Expt.~3, all we needed was to assign different values for collective noise to the different predicates in our model. Again, the success of this manipulation confirms our original hypothesis: different predicates carry different amounts of noise with their collective properties, which determines their relative rates of collective interpretations.
 
-Speakers and listeners are aware of speakers' perceptual access to knowledge, $a$. When $a$ is partial, distributive interpretations are less informative because the speaker's epistemic support for the interpretation is incomplete. Concretely, $S_{1}$'s goal is to align the naive listener $L_{0}$'s beliefs about the state $s$ with his own. $L_{0}$ forms those beliefs on the basis of $S_{1}$'s utterance (and prior knowledge), and in the case of partial knowledge a distributive interpretation gives $L_{0}$ more information than $S_{1}$ had in the first place. In such a case, this process of alignment is relatively unsuccessful; $S_{1}$ could have done better by intending a collective interpretation, which would have given $L_{0}$ a belief about $s$ much closer to $S_{1}$'s own belief. The pragmatic listener $L_{1}$ models this reasoning, and updates the inference over intended interpretations accordingly. Being less informative under partial access to knowledge, distributive interpretations are less useful and thus less likely. By decreasing the probability of distributive interpretations, limiting access to knowledge results in an increase in the probability of the collective interpretation.
+%Further supporting the general framework of rational inference in communication, our model also captured (both qualitatively and quantitatively) the affect of speaker knowledge on interpretation choice. We observed that in scenarios where speakers likely lacked information about individual properties, collective interpretations were more prevalent. We hypothesized a source for this effect: without epistemic support for distributive interpretations, collective interpretations are more useful to speakers, and thus more probable for listeners. The success of the speaker access to knowledge parameter, $a$, in our model lends credence to this hypothesis. As in the case of modeling contextual predictability, we may trace the source of this effect to its start.
 
-With both contextual predictability and speaker knowledge, our modeling approach has allowed for the specification and testing of hypotheses situated at the interface between semantics and pragmatics: how utterance semantics interacts with properties of context---both linguistic and more broadly construed---to resolve the intended interpretation of potentially ambiguous utterances. Beyond the domain of plural predication, the lessons learned have far reach: speakers and listeners prefer more stable, more potentially informative utterances/interpretations; they also reason rationally about the evidence available as messages are selected. Ambiguity is endemic to natural language (for a recent discussion, see \citealp{piantadosietal2012}); taken out of context, nearly everything we say lacks its intended meaning. Both in our theories and in our daily lives, we therefore rely on context to specify the underspecified. Here we have demonstrated two ways context, together with the reasoning we bring to bear on it, achieves that goal.
+%Speakers and listeners are aware of speakers' perceptual access to knowledge, $a$. When $a$ is partial, distributive interpretations are less informative because the speaker's epistemic support for the interpretation is incomplete. Concretely, $S_{1}$'s goal is to align the naive listener $L_{0}$'s beliefs about the state $s$ with his own. $L_{0}$ forms those beliefs on the basis of $S_{1}$'s utterance (and prior knowledge), and in the case of partial knowledge a distributive interpretation gives $L_{0}$ more information than $S_{1}$ had in the first place. In such a case, this process of alignment is relatively unsuccessful; $S_{1}$ could have done better by intending a collective interpretation, which would have given $L_{0}$ a belief about $s$ much closer to $S_{1}$'s own belief. The pragmatic listener $L_{1}$ models this reasoning, and updates the inference over intended interpretations accordingly. Being less informative under partial access to knowledge, distributive interpretations are less useful and thus less likely. By decreasing the probability of distributive interpretations, limiting access to knowledge results in an increase in the probability of the collective interpretation.
+
+%With both contextual predictability and speaker knowledge, 
+
+Beyond the domain of plural predication, the lessons learned have far reach: speakers and listeners prefer more stable, more potentially informative utterances and interpretations; they also reason rationally about the evidence available as messages are selected. Ambiguity is endemic to natural language (for a recent discussion, see \citealp{piantadosietal2012}); taken out of context, nearly everything we say lacks its intended meaning. Both in our theories and in our daily lives, we therefore rely on context to specify the underspecified. Here we have demonstrated two ways context, together with the reasoning we bring to bear on it, achieves that goal.
 
 
 \section{Conclusion}
